fixed shift up

--- a/lifetracker-ui/src/components/SleepPage/SleepPage.css
+++ b/lifetracker-ui/src/components/SleepPage/SleepPage.css
@@ -1,28 +1,31 @@
-
 .SleepPage {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 25vh;
+  height: 70vh;
   font-family: 'Poppins', sans-serif;
+  overflow: hidden; /* Prevents content overflow */
 }
 
-.SleepPage h1 {
-  font-size: 24px;
-  font-weight: 900;
-  text-align: center;
-  margin-bottom: 20px;
+.SleepPage .header {
+  top: 20px;
 }
 
-.SleepPage form {
+.SleepPage .content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%; /* Fill the available height */
+  overflow-y: auto; /* Enable vertical scrolling when needed */
+}
+
+.SleepPage .formContainer {
   margin-bottom: 20px;
 }
 
 .SleepPage .sleepData {
   margin-top: 20px;
-}
-
-.SleepPage .sleepData h2 {
-  margin-bottom: 10px;
+  max-height: 100%;
+  overflow-y: auto;
 }
